--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
+        "laravel/cashier": "^12.8",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "shippo/shippo-php": "^1.4",
